<resources>
    <string name="app_name">SelfLearning</string>
    <string name="action_settings">Settings</string>
    <string name="trans_with_serializable">Serializable demo</string>
    <string name="trans_with_parcelable">Parcelable demo</string>
    <string name="activity_return">Activity return demo</string>
    <string name="call_multi_activities">Call two activities</string>
    <string name="demo_aty_1">Demo Activity 1</string>
    <string name="demo_aty_2">Demo Activity 2</string>
    <string name="application_share_data">Application share data</string>
    <string name="save">Save</string>
    <string name="service_demo">Service demo</string>
    <string name="btn_start_service">Start Service</string>
    <string name="btn_stop_service">Stop Service</string>
    <string name="bind_service_flag">Service disconnected</string>
    <string name="bind_service_demo">Bind service</string>
    <string name="data_to_service">What you want to toast?</string>
    <string name="data_to_service_default">Default data</string>
    <string name="bind_data_to_service_default">Default data</string>
    <string name="btn_sync_service">Sync data</string>
    <string name="binded_service_loop_count">Service unavaliable</string>
    <string name="aidl_service">AIDL Demo</string>
    <string name="btn_bind_service">Bind service</string>
    <string name="btn_unbind_service">Unbind service</string>
    <string name="broadcast_receiver_demo">Broadcase Receiver Demo</string>
    <string name="btn_send_msg">Send message</string>
    <string name="btn_register_broadcast_receiver">Regist Broadcast Receiver</string>
    <string name="btn_remove_broadcast_receiver">Remove Broadcast Receiver</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tabbed_demo">Tabbed Demo</string>
    <string name="framelayout_demo">Framelayout Demo</string>
    <string name="layout_from_code">Create Layout from Code</string>
    <string name="component_demo">Component Demo</string>
    <string name="date_picker">0000-00-00</string>
    <string name="time_picker">00:00</string>
    <string name="radio_choiceA">A</string>
    <string name="radio_choiceB">B</string>
    <string name="radio_choiceC">C</string>
    <string name="submit">Submit</string>
    <string name="animation_demo">Animation Demo</string>
    <string name="transparent">Transparent Me!</string>
    <string name="rotate">Rotate Me!</string>
    <string name="move">Move Me!</string>
    <string name="zoom">Zoom Me!</string>
    <string name="mix">Mixed Animation!!!</string>
    <string name="custom_anim">Something Novel!</string>
    <string name="layout_animation_demo">Layout Animation</string>
    <string name="btn">Button</string>
    <string name="btn_create">Create More</string>
    <string name="view_pager_demo">View Pager Demo</string>
    <string name="hello">Hello</string>
    <string name="btn_reset_viewpager_flag">Reset Viewpager Demo</string>
    <string name="action_bar_demo">ActionBar Demo</string>
    <string name="actionbar_search">Search</string>
    <string name="actionbar_setting">Setting</string>
    <string name="actionbar_share">Share</string>
    <string name="btn_image_toast">Show Image Toast</string>
    <string name="notification_demo">Notification Demo</string>
    <string name="btn_show_notification">Show Notification!</string>
    <string name="channel_name">My Demo Notification Channel</string>
    <string name="channel_description">This is the info of the Notification Channel</string>
    <string name="sharedpreference_demo">SharedPreference Demo</string>
    <string name="save_to_sharedpreference">Write something you want to save</string>
    <string name="load">Load</string>
    <string name="clear">Clear</string>
    <string name="preference_demo">Preference Activity Demo</string>
    <string name="checkbox">Checkbox</string>
    <string name="checkbox_title">Open it?</string>
    <string name="checkbox_on">Checkbox opened!</string>
    <string name="checkbox_off">Checkbox closed!</string>
    <string name="list">List</string>
    <string name="list_title">Please choose one</string>
    <string name="list_summary">Please click to choose</string>
    <string name="edittext">Edittext</string>
    <string name="edittext_title">What you want?</string>
    <string name="edittext_summary">Please input something you want</string>
    <string name="edittext_message">Thank you</string>
    <string name="sql_demo">SQLite Demo</string>
    <string name="edittext_hint">Please provide the name</string>
    <string name="radio_male">male</string>
    <string name="radio_female">female</string>
    <string name="content_provider_demo">Content Provider Demo</string>
    <string name="btn_write_db">Write in DB</string>
    <string name="write_db_hint">What you want to write in the DB?</string>
    <string name="json_demo">JSON Demo</string>
</resources>
