<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AnimationDemo">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transparent"
        android:id="@+id/btn_transparent"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rotate"
        android:id="@+id/btn_rotate"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move"
        android:id="@+id/btn_move"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zoom"
        android:id="@+id/btn_zoom"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mix"
        android:id="@+id/btn_mix"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_anim"
        android:id="@+id/btn_custom_anim"/>


</LinearLayout>