<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SharedPreferenceDemo">

    <EditText
        android:id="@+id/save_to_sharedpreference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/save_to_sharedpreference"/>

    <Button
        android:id="@+id/btn_save"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_load"
        android:text="@string/load"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_clear"
        android:text="@string/clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>