<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ComponentDemo">

    <Button
        android:id="@+id/btn_date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_picker"/>

    <Button
        android:id="@+id/btn_time_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_picker"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radio_choiceA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_choiceA"/>
        <RadioButton
            android:id="@+id/radio_choiceB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_choiceB"/>
        <RadioButton
            android:id="@+id/radio_choiceC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_choiceC"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"/>

    <CheckBox
        android:id="@+id/multi_choiceA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/radio_choiceA"/>
    <CheckBox
        android:id="@+id/multi_choiceB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/radio_choiceB"/>
    <CheckBox
        android:id="@+id/multi_choiceC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/radio_choiceC"/>

    <Button
        android:id="@+id/btn_multi_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"/>

</LinearLayout>